      transform)
    - Implemented qpp::QCircuit::get_gate_depth()
    - Implemented qpp::Bit_circuit::get_gate_count() and
      qpp::Bit_circuit::get_gate_depth()
    - Added enum {RES, PROB, ST} in "constants.h" for using with std::get<> on 
      the result of qpp::measure() etc.
    - Added MSVC support for CMake
    - Updated Google Test to version 1.8.1

Version 1.2 - 10 February 2019
    - Added new function in "functions.h":
          qpp::normalize() - normalizes a state vector (ket or bra) or density
                             matrix
    - Added new functions in "number_theory.h":
          qpp::convergents() - overloads that compute the convergents from a
                               continued fraction or a real number, see
                               http://mathworld.wolfram.com/Convergent.html
    - Added new functions in "operations.h":
          qpp::TFQ()      - inverse qudit quantum Fourier transform (includes
                            qubit QFT as a special case) on an entire quantum
                            state (state vector or density matrix)
          qpp::applyTFQ() - apply the inverse qudit quantum Fourier transform
                            on a subset of qudits of a state vector or
                            density matrix
    - Added new member functions for qpp::Gates:
          qpp::Gates::MODMUL() - quantum modular multiplication
    - Added Shor's algorithm example in "examples/shor.cpp"
    - Introduced the largest unsigned index qpp::idx_inf in "constants.h"
    - Added new exception classes in "classes/exception.h":
          qpp::exception::QuditAlreadyMeasured - self-explanatory
          qpp::exception::Duplicates      - thrown when a system such as a
                                            std::vector contains duplicates
          qpp::exception::NotImplemented  - code not yet implemented
          qpp::exception::InvalidIterator - invalid iterator (not initialized,